--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
       <artifactId>extentreports</artifactId>
       <version>5.0.5</version>
     </dependency>
-
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.18.1</version>
+    </dependency>
   </dependencies>
 </project>
